<resources>
    <string name="app_name">News</string>
    <string name="Email_Id">Email Id</string>
    <string name="Password">Password</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="REGISTER">REGISTER</string>
    <string name="MOBILE">Mobile</string>
    <string name="CAT">Sports</string>
    <string name="TIME">19h ago</string>
    <string name="HEADING">MS Dhoni, CSK players attend Suresh Raina’s daughter’s birthday</string>
    <string name="LIKES">123</string>
    <string name="CHECK_WEATHER">CHECK WEATHER</string>
    <string name="COMMENTS">746</string>
    <string name="PEOPLE">20k people answered correctly</string>

</resources>
